# openjd-sessions-for-python

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  hatch.toml  pyproject.toml  requirements-testing.txt
.github/scripts/: get_latest_changelog.py
.github/workflows/: publish.yml  release_bump.yml  release_publish.yml  reuse_python_build.yml
scripts/: run_codebuild_proxy_tests.sh  run_sudo_tests.sh
src/openjd/sessions/: __init__.py  _action_filter.py  _embedded_files.py  _logging.py  _os_checker.py  _path_mapping.py  _popen_windows_as_user.py  _powershell_generator.py  _runner_base.py  _runner_env_script.py  _runner_step_script.py  _session.py  _session_user.py  _subprocess.py  _tempdir.py  _types.py  _win32api.py  _win32api_helpers.py  _windows_permission_helper.py  _windows_process_killer.py
src/openjd/sessions/_scripts/_posix/: _signal_subprocess.sh
src/openjd/sessions/_scripts/_windows/: _signal_win_subprocess.ps1  _signal_win_subprocess.py
src/openjd/sessions/_win32/: _api.py  _helpers.py  _locate_executable.py  _popen_as_user.py
test/openjd/: test_importable.py
test/openjd/sessions/: conftest.py  test_action_filter.py  test_embedded_files.py  test_importable.py  test_os_checker.py  test_path_mapping.py  test_powershell_generator.py  test_runner_base.py  test_runner_env_script.py  test_runner_step_script.py  test_session.py  test_session_user.py  test_subprocess.py  test_tempdir.py  test_windows_process_killer.py
test/openjd/sessions/support_files/: app_10s_run.ps1  app_10s_run.py  app_10s_run.sh  app_10s_run_ignore_signal.py  app_20s_run.ps1  app_20s_run.py  app_20s_run.sh  app_20s_run_ignore_signal.py  run_app_20s_run.py
test/openjd/utils/: windows_acl_helper.py
testing_containers/codebuild_proxy/: Dockerfile  run_tests.sh
testing_containers/ldap_sudo_environment/: Dockerfile  README.md  addUsersGroups.ldif  addUsersToSharedGroup.ldif  run_tests.sh  start_ldap.sh  test_setup.sh
testing_containers/localuser_sudo_environment/: Dockerfile  README.md  run_tests.sh
